management-api/base/deploymentconfig.yaml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: management-api
spec:
  replicas: 1
  selector:
    service: management-api
    app.kubernetes.io/name: thoth
    app.kubernetes.io/component: management-api
    app.kubernetes.io/managed-by: aicoe-thoth-devops
  template:
    metadata:
      labels:
        service: management-api
        app.kubernetes.io/name: thoth
        app.kubernetes.io/component: management-api
        app.kubernetes.io/managed-by: aicoe-thoth-devops
    spec:
      serviceAccountName: management-api
      containers:
        - name: management-api-openapi
          image: management-api:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "768Mi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "1500m"
          readinessProbe:
            httpGet:
              path: "/readiness"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: "/liveness"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 10
  test: false
