management-api/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: management-api
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    service: management-api
